--- a/src/views/About/About.css
+++ b/src/views/About/About.css
@@ -1,79 +1,66 @@
 /* container elements */
 
 .about {
-  display: flex;
-  flex-direction: row;
-}
-
-.content-container {
-  width: 94vw;
-  display: flex;
-  flex-direction: column;
-}
-
-.intro-container {
-  margin-top: 2vw;
-  display: flex;
-  justify-content: center;
-}
-
-.work-container {
-  margin-top: 2vw;
-  display: flex;
-  justify-content: center;
-}
-
-.hobby-container {
-  margin-top: 2vw;
-  display: flex;
-  justify-content: center;
-}
-
-.quote-container {
-  margin-top: 2vw;
-  display: flex;
-  justify-content: center;
+  margin-left: 0.6%;
+  display: grid;
+  grid-template-columns: 4vw 10vw 35vw 35vw 10vw 4vw;
+  grid-template-rows: 9vh 20vh 20vh 20vh 20vh 9vh;
 }
 
 /* content elements */
+.header {
+  grid-column: 1 / 7;
+  grid-row: 1;
+}
 
 .intro {
-  width: 60vw;
+  grid-column: 2 / 6;
+  grid-row: 2;
   font-size: 1.2rem;
+  display: flex;
+  text-align: center;
 }
 
 .work {
+  grid-column: 3 / 4;
+  grid-row: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50vw;
   font-size: 1.2rem;
 }
 
 .hobbies {
+  grid-column: 4 / 5;
+  grid-row: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50vw;
   font-size: 1.2rem;
 }
 
 .quote {
-  width: 70vw;
+  grid-column: 3 / 5;
+  grid-row: 5;
   font-size: 30px;
-  margin-top: 5vh;
 }
 
 /* style elements */
 
 .left-bar {
-  width: 30vw;
-  height: 98vh;
+  grid-column: 1;
+  grid-row: 1 / 6;
   background-color: #97a7b4;
 }
 
 .right-bar {
-  width: 30vw;
-  height: 98vh;
+  grid-column: 6;
+  grid-row: 1 / 6;
+  background-color: #97a7b4;
+}
+
+.foot-bar {
+  grid-column: 2 / 6;
+  grid-row: 6;
   background-color: #97a7b4;
 }
