changing styling completely

--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -1,21 +1,18 @@
 .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 10px 10px 10px 10px;
-    background-color: #97a7b4;
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
 }
 
 .headerLink {
-    display: flex;
-    width: 19vw;
-    height: 50px;
-    /* border-left: 1px solid black;
-    border-right: 1px solid black; */
-    transform: skewX(-15deg);
+  display: flex;
+  width: 5vw;
+  height: 50px;
+  transform: skewX(-15deg);
+  align-items: center;
+  justify-content: center;
+}
 
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    background-color: #567186;
+.headerLink:hover {
+  background-color: grey;
 }
