--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
 * {
-  background-color: rgb(1, 1, 1);
+  /* display: flex;
+  flex-direction: column; */
+  background-color: rgb(31, 31, 31);
+  /* background-color: rgb(0, 0, 0); */
   color: rgb(170, 170, 170);
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
