--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,3 +1,8 @@
 .home {
+  background-image: url('../../../public/images/home-background.jpg');
+  background-size: 100vw;
   margin-top: 5vh;
+  width: 95vw;
+  height: 85vh;
+  border: 10px solid black;
 }
