--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 * {
-  /* display: flex;
-  flex-direction: column; */
-  background-color: rgb(31, 31, 31);
-  /* background-color: rgb(0, 0, 0); */
-  color: rgb(170, 170, 170);
+  background-color: rgb(110, 109, 109);
+  color: rgb(223, 223, 223);
+  font-size: 1.2rem;
+  /* overflow: hidden; */
 }
 
 .App {
