--- a/src/views/About/About.css
+++ b/src/views/About/About.css
@@ -2,68 +2,35 @@
 
 .about {
   margin-left: 0.6%;
-  display: grid;
-  grid-template-columns: 4vw 10vw 35vw 35vw 10vw 4vw;
-  grid-template-rows: 11vh 20vh 20vh 20vh 20vh 7vh;
-}
-
-/* content elements */
-.header {
-  grid-column: 1 / 7;
-  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .intro {
-  grid-column: 2 / 6;
-  grid-row: 2;
   font-size: 1.2rem;
   display: flex;
   text-align: center;
-  border-bottom: 1px solid white;
+  margin-top: 5%;
 }
 
-.work {
-  grid-column: 3 / 4;
-  grid-row: 3;
+.list-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5%;
+}
+
+.lists {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 1.2rem;
-  border-bottom: 1px solid white;
-}
-
-.hobbies {
-  grid-column: 4 / 5;
-  grid-row: 3;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.2rem;
-  border-bottom: 1px solid white;
 }
 
 .quote {
-  grid-column: 3 / 5;
-  grid-row: 5;
   font-size: 30px;
+  margin-top: 5%;
+  width: 75%;
 }
 
 /* style elements */
-
-.left-bar {
-  grid-column: 1;
-  grid-row: 1 / 6;
-  background-color: #97a7b4;
-}
-
-.right-bar {
-  grid-column: 6;
-  grid-row: 1 / 6;
-  background-color: #97a7b4;
-}
-
-.foot-bar {
-  grid-column: 2 / 6;
-  grid-row: 6;
-  background-color: #97a7b4;
-}
