--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -2,6 +2,16 @@
   display: flex;
   flex-direction: row;
   justify-content: right;
+  background-color: grey;
+  width: 100vw;
+  height: 8.5vh;
+}
+
+.link-container {
+  display: flex;
+  flex-direction: row;
+  background-color: grey;
+  justify-content: right;
 }
 
 .headerLink {
@@ -12,16 +22,20 @@
   transform: skewX(-15deg);
   align-items: center;
   justify-content: center;
+  font-size: 1rem;
+  background-color: grey;
 }
 
 .headerLink:hover {
-  background-color: grey;
+  background-color: rgb(180, 180, 180);
   color: black;
+  cursor: grab;
 }
 
 .logo {
   display: flex;
   position: absolute;
-  left: 0vw;
-  /* z-index: -1; */
+  left: 1vw;
+  top: 3.5vh;
+  background-color: grey;
 }
