--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 * {
   background-color: rgb(110, 109, 109);
   color: rgb(223, 223, 223);
-  font-size: 1.2rem;
-  /* overflow: hidden; */
 }
 
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.component {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1.3rem;
+  text-shadow: 5px 5px 5px rgb(51, 51, 51);
 }
