--- a/src/views/About/About.css
+++ b/src/views/About/About.css
@@ -25,6 +25,8 @@
   flex-direction: column;
   align-items: center;
   font-size: 1.2rem;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .quote {
