--- a/src/views/Projects/Projects.css
+++ b/src/views/Projects/Projects.css
@@ -5,6 +5,12 @@
   justify-content: center;
 }
 
+.motion-div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
 .project-card {
   display: flex;
   flex-direction: column;
@@ -24,16 +30,26 @@
   box-shadow: 10px 10px 10px rgb(63, 63, 63);
 }
 
+.p-gh-url {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-decoration: none;
+}
+
 .p-gh-logo {
-  max-height: 13vh;
-  padding: -5px;
+  max-height: 5vh;
   border-radius: 50%;
+  margin-right: 10px;
+}
+
+.p-gh-url:hover {
+  text-shadow: 5px 5px 3px rgb(36, 36, 36);
 }
 
 .p-gh-logo:hover {
-  box-shadow: 5px 5px 10px rgb(63, 63, 63);
   background-color: rgb(75, 75, 75);
-  -webkit-filter: drop-shadow(5px 5px 5px rgb(63, 63, 63));
+  filter: drop-shadow(5px 5px 5px rgb(63, 63, 63));
 }
 
 .p-button {
@@ -43,7 +59,27 @@
   font-size: 24px;
 }
 
-.p-button:hover {
-  box-shadow: 5px 5px 10px rgb(63, 63, 63);
-  background-color: rgb(63, 63, 63);
+.p-deploy-url {
+  display: flex;
+  text-decoration: none;
+  height: 4vh;
+  width: 10vw;
+  align-items: center;
+}
+
+.p-button:hover,
+.p-deploy-url:hover {
+  text-shadow: 5px 5px 3px rgb(36, 36, 36);
+  cursor: pointer;
+}
+
+.p-links {
+  display: flex;
+  flex-direction: row;
+}
+
+.p-description {
+  max-width: 50vw;
+  justify-content: center;
+  text-align: center;
 }
