--- a/src/views/Projects/Projects.css
+++ b/src/views/Projects/Projects.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+  width: 100vw;
 }
 
 .motion-div {
