changed footer position: absolute to position: fixed

--- a/src/views/Footer/Footer.css
+++ b/src/views/Footer/Footer.css
@@ -6,8 +6,8 @@
 }
 
 .footer {
-  position: absolute;
-  bottom: 0vh;
+  position: fixed;
+  bottom: 0;
   height: 8.5vh;
   width: 100vw;
   display: flex;
