--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,6 @@
 
 .component {
   font-family: 'Source Code Pro', monospace;
-  font-size: 1.3rem;
+  font-size: 1.05vw;
   text-shadow: 5px 5px 5px rgb(51, 51, 51);
 }
