--- a/src/views/Footer/Footer.css
+++ b/src/views/Footer/Footer.css
@@ -27,7 +27,7 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   width: 6vw;
   height: 4vh;
 }
