--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   background-color: rgb(110, 109, 109);
   color: rgb(223, 223, 223);
+  /* overflow: hidden; */
 }
 
 .App {
@@ -13,4 +14,6 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 1.05vw;
   text-shadow: 5px 5px 5px rgb(51, 51, 51);
+  position: fixed;
+  top: 10vh;
 }
