--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -6,7 +6,7 @@
 }
 
 .header {
-  position: relative;
+  position: fixed;
   top: -1vh;
   display: flex;
   flex-direction: row;
@@ -14,6 +14,7 @@
   width: 100vw;
   height: 8.5vh;
   box-shadow: 0px 10px 5px rgb(63, 63, 63);
+  z-index: 1;
 }
 
 .link-container {
