--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,5 +1,5 @@
 .home {
-  margin-top: 10vh;
+  margin-top: 5vh;
   width: 75vw;
   height: auto;
   padding: 5px;
@@ -17,7 +17,11 @@
 }
 
 img {
+  object-fit: cover;
   max-height: 60vh;
+  max-width: 30vw;
+  width: auto;
+  height: auto;
 }
 
 .bio-container {
